--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -36,5 +36,5 @@
     ]
   },
   "homepage": ".",
-  "homepage1": "https://joeisanerd.github.io/scorecard"
+  "homepage1": "https://geekydevjoe.github.io/scorecard"
 }
